--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --accent-color: #2196f3;
   --ccolor-withe: #ffffff;
   --logo-color: #000000;
+  --cubick:transition: , 2500ms,cubic-bezier(0.4, 0,0.2,1);
 }
 
 html {
@@ -76,7 +77,8 @@ a {
 
 .header .logo {
   margin-right: 93px;
-  
+  padding-top: 24px;
+  padding-bottom: 25px;  
 
   color: var(--logo-color);
   text-decoration: none;
@@ -117,6 +119,9 @@ a {
   line-height: 1.43;
   letter-spacing: 0.02em;
   justify-content: center;
+  transition-property: color;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 
 
@@ -127,8 +132,6 @@ a {
 
 .after-link{
   position: relative;
-  
-
 }
 
 
@@ -172,6 +175,9 @@ a {
   font-size: 14px;
   line-height: 1, 43;
   letter-spacing: 0.02em;
+  transition-property: color;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 .contact .svg-link:hover,
 .contact .svg-link:focus {
@@ -194,6 +200,9 @@ a {
   width: 16px;
   justify-content: center;
   margin-right: 10px;
+  transition-property: fill;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 
 .icon-tel {
@@ -203,6 +212,9 @@ a {
   width: 10px;
   justify-content: center;
   margin-right: 10px;
+  transition-property: fill;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 
 .hero {
@@ -257,9 +269,47 @@ a {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+  transition-property: background-color;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
+
 .button:hover{
   background-color: #188CE8;
+}
+
+.backdrop{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+
+}
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width:  528px;
+  min-height: 581px;
+
+  background-color: rgba(255, 255, 255, 1);
+ 
+}
+
+.modal-button{
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .peculiarties {
@@ -489,6 +539,9 @@ a {
   display: block;
   padding: 12px ;
   border-radius: 50%;
+  transition-property: background-color;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
  
 
 }
@@ -498,13 +551,15 @@ a {
   width: 20px;
   height: 20px;
 
-
  fill: #afb1b8;
+ 
+ transition-property: fill;
+ transition-duration: 2500ms;
+ transition-timing-function: var(--cubick);
 }
 
 .comand .soc-link:hover .soc-icon,
 .comand .soc-link:focus .soc-icon{
-  background-color: var(--accent-color);
   fill: var(--ccolor-withe);
 }
 
@@ -558,6 +613,9 @@ padding-bottom: 94px;}
   height: 92px;
   justify-content: center;
   align-items: center;
+  transition-property: fill;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 
 .clients-list .link:hover .icon, .clients-list .link:focus .icon{
@@ -574,6 +632,9 @@ padding-bottom: 94px;}
   width: 106px;
   height: 60px;
   fill: #afb1b8;
+  transition-property: fill;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 
 
@@ -625,12 +686,20 @@ padding-bottom: 94px;}
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
+  transition-property: color;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
+  transition-property: background-color;
+
+ 
+
 }
 .project .button:hover,
 .project .button:focus {
   color: var(--ccolor-withe);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  
 }
 
 .portpholio-list {
@@ -638,32 +707,64 @@ padding-bottom: 94px;}
   flex-wrap: wrap;
   margin-top: 0px;
   padding-left: 0px;
+  transition-property:box-shadow;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
 .portpholio-list .item:hover, .portpholio-list .item:focus{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
 .portpholio-list .link{
+  
   text-decoration: none;
 }
 
-.pph-position{
-  position: relative;
-}
-
-.position-pph{
-  position: absolute;
-  width: 370px;
-}
-
 .portpholio-img {
+  position: relative;
   display: block;
 }
 
+.link-position{
+ position: relative;
+
+}
+.txt{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  transition-property:transform;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
+  
+}
+
+.text-img{
+
+
+}
+
+.img-text:hover, .img-text:focus{
+  opacity: 1;
+  transform: translatey(-100%);
+}
+
 .img-text{
+  position: absolute;
+ 
+  width: 100%;
+  opacity: 0;
+  transition-property:transform;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
+
   padding-top: 63px;
   padding-right: 24px;
   padding-bottom: 63px;
   padding-left: 24px;
+  max-width: 370px;
 
   background-color: rgba(33, 150, 243, 0.9);
   font-weight: 400;
@@ -672,6 +773,8 @@ line-height: 1.56;
 letter-spacing: 0.03em;
 color: #FFFFFF;
 }
+
+
 
 .img-border { 
   padding: 20px 24px;
@@ -805,9 +908,13 @@ color: #FFFFFF;
   display: block;
   padding: 12px;
   border-radius: 50% 50%;
+  
+  transition-property: background-color;
+  transition-duration: 2500ms;
+  transition-timing-function: var(--cubick);
 }
+
 .soc-link-list .link:hover,.soc-link-list .link:focus{
-  fill: var(--ccolor-withe);
   background-color: #2196F3;
 }
 
